Fix horizontal scrolling

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -29,6 +29,7 @@
   position: relative;
   width: 71vw;
   height: calc(100vh - 124px);
+  overflow: hidden;
 }
 
 .mainText {
@@ -203,6 +204,7 @@
   margin-top: 32px;
   padding: 128px 31%;
   background-color: #282e45;
+  overflow: hidden;
 }
 
 .videoIframe {
